// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vlt-input is textarea 1`] = `
<div
  class="Vlt-textarea"
>
  <textarea />
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`vlt-input renders correctly 1`] = `
<div
  class="Vlt-input"
>
  <input
    size="20"
    type="text"
  />
  <!--v-if-->
  <!--v-if-->
</div>
`;
